--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -10,23 +10,24 @@
   <div class="row">
     <div class="col-md-12 blog-container">
       {{#each posts}}
-        <div class="panel panel-default" data-post="{{id}}">
-          <div class="panel-heading">
-            <button class="delete btn btn-danger">x</button>
-            <button class="edit btn btn-info">EDIT</button>
-            <h2>{{title}}</h2>
-              <small>{{createdAt}}</small>
-            </h2>
-            <h5 style="float: right; color: blue; margin-top: -10px;">Written by: {{Expense.name}} </h5>
-          </div>
-          <div class="panel-body">
-            <p>{{body}}</p>
-          </div>
+      <div class="panel panel-default" data-post="{{id}}">
+        <div class="panel-heading">
+          <button class="delete btn btn-danger">x</button>
+          <button class="edit btn btn-info">EDIT</button>
+          <h2>{{title}}</h2>
+          <small>{{createdAt}}</small>
+          </h2>
+          <h5 style="float: right; color: blue; margin-top: -10px;">Written by: {{Expense.name}} </h5>
         </div>
+        <div class="panel-body">
+          <p>{{body}}</p>
+        </div>
+      </div>
       {{/each}}
     </div>
   </div>
 </div>
+<div class=""></div>
 <!-- Custom Script -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" type="text/javascript"></script>
 <script src="js/blog.js" type="text/javascript"></script>
