--- a/views/expenses.handlebars
+++ b/views/expenses.handlebars
@@ -1,14 +1,20 @@
-<div class="container">
-  <div class="row top-30">
-    <div class="col-md-2 col-sm-2">
-      <a class="btn btn-default" href="/blog">Go to Blog</a>
+<section id='top' class='flex-container'>
+  <header class='flex-container'>
+    <nav>
+      <a href="/blog">Go to Blog</a>
+      <a href="/cms">New Post</a>
+    </nav>
+  </header>
+</section>
+<span class='topPad'><a href="" id='topScroll'>Top Pad</a></span>
+
+<section class='content'>
+  <div class='flex-container' id='contentPad'></div>
+  <div class='flex-container' id='content'>
+    <div class='flex-container'>
+      <p>About You</p>
     </div>
-    <div class="col-md-2 col-sm-2">
-      <a class="btn btn-default" href="/cms">New Post</a>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-8 col-md-offset-2">
+    <div class='flex-container' id='form-control'>
       <div class="expense-container">
         <div id="calendar"></div>
         <h1>Expenses</h1>
@@ -24,47 +30,67 @@
           <tbody>
             <div id='statsList'>
               <span id='statIncome'>
-{{!-- monthly income --}}
+                {{!-- monthly income --}}
               </span>
               <span id='statExpense'>
-{{!-- total expenses --}}
+                {{!-- total expenses --}}
               </span>
               <span id='statDay'>
-{{!-- savings per day --}}
+                {{!-- savings per day --}}
               </span>
               <span id='statRemainder'>
-{{!-- amt saved after billing cycle --}}
+                {{!-- amt saved after billing cycle --}}
               </span>
             </div>
- <form id="expense-form">
-  <div class="form-group">
+            <form id="expense-form">
+              <div class="form-group">
 
-    <label for="expense-name">Expense Name</label>
-    <input type="text" class="form-control" id="expense-name" placeholder="Enter the Name of the Expense">
-  </div>
-  <div class="form-group">
-    <label for="inputCost">Cost Name</label>
-    <input type="text" class="form-control" id="expense-cost" placeholder="Enter the Cost of the Expense">
-  </div>
+                <label for="expense-name">Expense Name</label>
+                <input type="text" class="form-control" id="expense-name" placeholder="Enter the Name of the Expense">
+              </div>
+              <div class="form-group">
+                <label for="inputCost">Cost Name</label>
+                <input type="text" class="form-control" id="expense-cost" placeholder="Enter the Cost of the Expense">
+              </div>
 
-  <div class="form-group">
-    <label for="inputDate">Date</label>
-    <input type="text" class="form-control" id="expense-date" placeholder="Enter the Date of the Expense">
-  </div>
+              <div class="form-group">
+                <label for="inputDate">Date</label>
+                <input type="text" class="form-control" id="expense-date" placeholder="Enter the Date of the Expense">
+              </div>
 
-  <button type="submit" class="btn btn-success">Budge It</button>
+              <button type="submit" class="btn btn-success">Budge It</button>
 
-</form>
+            </form>
           </tbody>
         </table>
-
-
-
-
-
+      </div>
+      <div class='pad'></div>
+      <div class='flex-container'>
+        <p>Question 1: Your mind is always buzzing with unexplored ideas and plans.</p>
+      </div>
+      <div class='flex-container'>
+        <select class='scoreMenu' id='test'>
+          <option value="1">1 (Strongly Disagree)</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5 (Strongly Agree)</option>
+        </select>
       </div>
     </div>
+    <div class='pad'></div>
   </div>
-  </d>
-  <!-- Custom Script -->
-  <script src="js/expense.js" type="text/javascript"></script>
+  <div class='flex-container' id='contentPad'></div>
+</section>
+
+<section id='footer'>
+  <footer class="footer">
+    <nav class='footNav'>
+      <a href='#topScroll' class='footLink'>Back to Top</a>
+      <a href='#' class='footLink'>&copy;</a>
+    </nav>
+  </footer>
+</section>
+<script src="js/expense.js" type="text/javascript"></script>
+
+<!-- Custom Script -->
