--- a/views/expenses.handlebars
+++ b/views/expenses.handlebars
@@ -87,7 +87,7 @@
   <footer class="footer">
     <nav class='footNav'>
       <a href='#topScroll' class='footLink'>Back to Top</a>
-      <a href='#' class='footLink'>&copy;</a>
+      <a href='#' class='footLnk'>&copy;</a>
     </nav>
   </footer>
 </section>
