--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <title>Blog - Express</title>
   <!-- Latest compiled and minified CSS & JS -->
-  <link rel="stylesheet" href="css/style.css" media="screen" title="no title">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script data-require="jquery@*" data-semver="3.1.1" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script data-require="moment.js@*" data-semver="2.14.1" src="https://npmcdn.com/moment@2.14.1"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.3.0/fullcalendar.min.js"></script>
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.3.0/fullcalendar.min.css" />
+  {{!-- <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.3.0/fullcalendar.min.css" /> --}}
+  <link rel="stylesheet" href="css/style.css" media="screen" title="no title">
 </head>
 
 <body>
